# project-group-27

./: .gitignore  Cargo.toml  README.md  _config.json
.github/workflows/: rust.yml
backup/: Cargo.toml  README.md
backup/src/: main.rs  process_pair.rs
docs/: specifications.md
master/: Cargo.toml  README.md
master/hra_execs/: hall_request_assigner_macos
master/src/: config.rs  debug.rs  hall_request_assigner.rs  lib.rs  main.rs  network.rs  orders.rs  test_hall_assigner.rs
master/src/modules/: backup.rs  mod.rs  network.rs  process_pair.rs
master/src/utilities/: debug.rs  hall_request_assigner.rs  mod.rs
network-rust/: Cargo.toml  README.md
network-rust/src/: lib.rs  main.rs
network-rust/src/udpnet/: bcast.rs  peers.rs  sock.rs
shared_resources/: Cargo.toml  README.md
shared_resources/src/: call.rs  config.rs  elevator_behaviour.rs  elevator_message.rs  lib.rs  master_message.rs  request.rs  request_buffer.rs  requests.rs
slave/: Cargo.toml  README.md  _config.json
slave/src/: config.rs  debug.rs  doors.rs  fsm.rs  inputs.rs  io.rs  lib.rs  main.rs  network.rs  prototype_fsm.rs  requests.rs  utils.rs
slave/src/modules/: backup.rs  doors.rs  fsm.rs  io.rs  mod.rs  network.rs  process_pair.rs
slave/src/utilities/: call.rs  debug.rs  direction.rs  elevator_behaviour.rs  elevator_message.rs  elevator_status.rs  master_message.rs  mod.rs  request_buffer.rs  request_collection.rs  requests.rs
slave/src/utils/: config.rs  direction.rs  request_buffer.rs
src/: doors.rs  elevator.rs  elevator_io_types.rs  fsm.rs  inputs.rs  main.rs  orders.rs  requests.rs  timer.rs
