[package]
name = "master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-rust = { path = "../network-rust", version = "0.1.0" }
crossbeam-channel = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26.1"
shared_resources = { path = "../shared_resources", version = "0.1.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
