[package]
name = "slave"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust", tag = "v0.1.0" }
crossbeam-channel = "0.5"
network-rust = { path = "../network-rust", version = "0.1.0" }
shared_resources = { path = "../shared_resources", version = "0.1.0" }
crossterm = "0.26.1"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
